correct title.  clarifications.  publish source.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@335 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/sftp/sftp.tex
+++ b/assignments/sftp/sftp.tex
@@ -14,7 +14,7 @@
 \courseid{DT001G}
 \course{Informationsteknologi grundkurs}
 \assignmenttype{Laboration}
-\title{Säkerhet}
+\title{SFTP}
 \author{Daniel Bosk\footnote{%
 	E-post: \href{mailto:daniel.bosk@miun.se}{daniel.bosk@miun.se}.
 }}
@@ -69,6 +69,7 @@ hjälp av sftp(1).
 Skapa en SHA256-kontrollsumma för filen och ladda sedan upp denna textfil med 
 namnet \emph{dt001g.txt} till servern \url{myfiles.miun.se} i katalogen 
 \emph{public\_html} i hemkatalogen.
+Självklart går du tillväga på det sätt du nyss beskrivit i filen.
 
 
 \section{Examination}
@@ -76,7 +77,7 @@ namnet \emph{dt001g.txt} till servern \url{myfiles.miun.se} i katalogen
 \noindent
 I textfältet i inlämningslådan i lärplattformen lämnar du in kontrollsumman för 
 din textfil.
-Denna kontrollsumma kommer vid rättning att kontrolleras mot den fil ni laddat 
+Denna kontrollsumma kommer vid rättning att kontrolleras mot den fil du laddat 
 upp till servern, den går att komma åt publikt via URL
 \begin{center}
 	\url{http://myfiles.miun.se/~username/dt001g.txt}.
