publish source and added package texlive-science
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@359 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/install/install.tex
+++ b/assignments/install/install.tex
@@ -112,6 +112,7 @@ Med valfritt tillvägagångssätt, installera följande paket:
 \begin{itemize}
 	\item texlive,
 	\item texlive-latex-extra,
+	\item texlive-science,
 	\item texlive-lang-swedish, och
 	\item texlive-lang-ukenglish.
 \end{itemize}
