dt028g intro prog
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@376 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/computer/computer.tex
+++ b/assignments/computer/computer.tex
@@ -1,4 +1,5 @@
-\documentclass[11pt,a4paper]{miunasgn}
+% $Id$
+\documentclass[a4paper]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[english,swedish]{babel}
