--- a/assignments/latex/literature.tex
+++ b/assignments/latex/literature.tex
@@ -18,5 +18,5 @@ Därefter, för att komma in i \LaTeX, bör följande kapitel i WikiBooks
 	\item 5.3 Bibliography Management.
 \end{itemize}
 
-Slutligen ska universitetets rapportmall för examensarbeten \citep{MiUn2012rft} 
-läsas igenom.
+Slutligen ska universitetets rapportmall för examensarbeten som är anpassad för 
+\LaTeX{} \citep{Bosk2012etr} läsas igenom.
