--- a/lectures/latex/latex.tex
+++ b/lectures/latex/latex.tex
@@ -18,7 +18,8 @@
 \bibliographystyle{swealpha}
 
 % default style for listings is code and default language is TeX
-\lstset{style=code,language=tex}
+\lstset{style=code,language=[LaTeX]TeX,
+	basicstyle=\scriptsize,numberstyle=\scriptsize}
 
 \svnInfo $Id$
 
