--- a/project/project.tex
+++ b/project/project.tex
@@ -73,9 +73,9 @@ Syftet med mål och frågeställningen är att en annan student skulle kunna
 använda exakt samma mål och frågeställning och genomföra samma undersökning 
 oberoende.
 
-När du fått återkoppling på mål och frågeställning kan du sätta igång med din 
-undersökning.
-Du följer rapportmallen när du skriver din rapport och genomför undersökningen.
+När du känner dig säker på ditt mål och frågeställning, exempelvis efter 
+återkoppling, kan du sätta igång med din undersökning.
+Du följer rapportmallen när du genomför undersökningen och skriver din rapport.
 
 \begin{comment}
 The topic should be comparative analyses of (minimum two) different 
