preparing for inclusion of project ideas
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@412 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/project/project.tex
+++ b/project/project.tex
@@ -78,6 +78,8 @@ När du känner dig säker på ditt mål och frågeställning, exempelvis efter
 Du följer rapportmallen när du genomför undersökningen och skriver din rapport.
 
 \begin{comment}
+\subsection{Inspiration för projektidéer}
+\noindent
 The topic should be comparative analyses of (minimum two) different 
 technologies.  Here are four possible alternatives: 
 
