added author and license.  minor code fixes.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@520 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/computer/computer.tex
+++ b/assignments/computer/computer.tex
@@ -1,4 +1,5 @@
 % $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 \documentclass[a4paper]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -18,7 +19,10 @@
 \assignmenttype{Laboration}
 \title{Datorn}
 \author{Daniel Bosk\footnote{%
-	E-post: \href{mailto:daniel.bosk@miun.se}{daniel.bosk@miun.se}.
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
 }}
 \date{\svnId}
 
