--- a/assignments/install/literature.tex
+++ b/assignments/install/literature.tex
@@ -1,3 +1,5 @@
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 För att genomföra denna laboration bör du ha läst kapitlet om operativsystem 
 och bootprocessen \citep[kapitel 3]{Brookshear2012csa}.
 
