--- a/assignments/internet/literature.tex
+++ b/assignments/internet/literature.tex
@@ -1,3 +1,5 @@
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 Inför denna laboration bör du ha läst kapitlet om nätverk och internet 
 i kurslitteraturen \citep[kapitel 4]{Brookshear2012csa}.
 Utöver denna kan
