--- a/assignments/latex/latex.tex
+++ b/assignments/latex/latex.tex
@@ -19,7 +19,10 @@
 \assignmenttype{Laboration}
 \title{\LaTeX}
 \author{Daniel Bosk\footnote{%
-	E-post: \href{mailto:daniel.bosk@miun.se}{daniel.bosk@miun.se}.
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
 }}
 \date{\svnId}
 
@@ -66,9 +69,10 @@ officepaketen, det vill säga ordbehandlare.
 \label{sec:Genomforande}
 \noindent
 Öppna en ny .tex-fil för redigering, exempelvis genom följande kommandorad:
-\begin{lstlisting}
+\begin{terminal}
 $ gedit lab-latex.tex
-\end{lstlisting}
+$
+\end{terminal}
 Skriv ett kort exempeldokument med \emph{article} som dokumentklass där du 
 testar lite olika funktionalitet.
 
