--- a/assignments/latex/literature.tex
+++ b/assignments/latex/literature.tex
@@ -1,3 +1,5 @@
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 Som inledande läsning till laborationen kan ni läsa \emph{Just what is \TeX?} 
 \citep{TUG2011jwi}.
 Därefter, för att komma in i \LaTeX, bör följande kapitel i WikiBooks 
