--- a/assignments/security/literature.tex
+++ b/assignments/security/literature.tex
@@ -1,3 +1,5 @@
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 Du ska inför laborationen ha läst igenom avsnittet om säkerhet för nätverk och 
 internet i kurslitteraturen \citep[avsnitt 4.5]{Brookshear2012csa}.
 Därefter kan du läsa Post- och Telestyrelsens (PTS) \emph{Tolv goda råd} 
