--- a/introduction/welcome.tex
+++ b/introduction/welcome.tex
@@ -1,3 +1,5 @@
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 \documentclass[a4paper]{miunlett}
 \usepackage[utf8]{inputenc}
 \usepackage[swedish]{babel}
