--- a/lectures/internet/internet.tex
+++ b/lectures/internet/internet.tex
@@ -1,5 +1,5 @@
-\makeatletter\let\ifGm@compatii\relax\makeatother
-%\documentclass[handout]{beamer}
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 \documentclass[handout]{beamer}
 
 \mode<presentation>
@@ -46,7 +46,13 @@
 \title[Moment 3]
 {Informationsteknologi grundkurs:\\Föreläsning om datakommunikation}
 
-\author{Daniel Bosk}
+\author{Daniel Bosk\footnote{%
+	\tiny
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
+}}
 
 \institute
 {
