--- a/lectures/latex/latex.tex
+++ b/lectures/latex/latex.tex
@@ -35,7 +35,13 @@
 \title{%
 	\LaTeX
 }
-\author{Daniel Bosk}
+\author{Daniel Bosk\footnote{%
+	\tiny
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
+}}
 \institute[MIUN ITM]{%
 	%Division of Information and Communication Systems (ICS),\\
 	%Department of Information Technology and Media (ITM),\\
