--- a/lectures/present/present.tex
+++ b/lectures/present/present.tex
@@ -1,7 +1,7 @@
-%\documentclass[handout]{beamer}
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 \documentclass{beamer}
 \usepackage[utf8]{inputenc}
-%\usepackage{times}
 \usepackage[T1]{fontenc}
 \usepackage[english,swedish]{babel}
 \usepackage{url}
@@ -17,24 +17,23 @@
 
 \mode<presentation>
 {
-	%\usetheme{Berkeley}
-  %\usetheme{Dresden}
 	\usetheme{Frankfurt}
-  %\usetheme{Madrid}
-  %\usetheme{PaloAlto}
 	\setbeamercovered{transparent}
-  %\usecolortheme{default}
-  %\usecolortheme{crane}
 	\usecolortheme{seagull}
 }
-%\def\newblock{\hskip .11em plus .33em minus .07em}
 \setbeamertemplate{footline}{\insertframenumber}
 
 \title[Introduktion]{%
 	Introduktion till kursen\\
 	DT001G Informationsteknologi grundkurs
 }
-\author{Daniel Bosk}
+\author{Daniel Bosk\footnote{%
+	\tiny
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
+}}
 \institute[MIUN ITM]{%
 	%Division of Information and Communication Systems (ICS),\\
 	%Department of Information Technology and Media (ITM),\\
