--- a/lectures/security/security.tex
+++ b/lectures/security/security.tex
@@ -24,12 +24,16 @@
 {
 	\usetheme{Frankfurt}
 	\setbeamercovered{transparent}
-  %\usecolortheme{default}
 	\usecolortheme{seagull}
 }
 \setbeamertemplate{footline}{\insertframenumber}
 
-\author{Daniel Bosk}
+\author{Daniel Bosk\footnote{%
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
+}}
 \title{Säkerhet}
 \institute{
 	Institutionen för informationsteknologi och medier (ITM),\\
