--- a/project/project.tex
+++ b/project/project.tex
@@ -18,7 +18,10 @@
 \assignmenttype{Slutprojekt}
 \title{En undersökande jämförelse}
 \author{Daniel Bosk\thanks{%
-		Baserad på en uppgift författad av Magnus Eriksson.
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
 	}
 }
 \date{\svnId}
