--- a/assignments/security/security.tex
+++ b/assignments/security/security.tex
@@ -1,3 +1,5 @@
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 \documentclass[a4paper]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[english,swedish]{babel}
@@ -16,7 +18,10 @@
 \assignmenttype{Laboration}
 \title{Säkerhet}
 \author{Daniel Bosk\footnote{%
-	E-post: \href{mailto:daniel.bosk@miun.se}{daniel.bosk@miun.se}.
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
 }}
 \date{\svnId}
 
