--- a/assignments/terminal/literature.tex
+++ b/assignments/terminal/literature.tex
@@ -1,3 +1,5 @@
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 För att genomföra denna laboration bör du ha läst kapitlet om operativsystem 
 \citep[kapitel 3]{Brookshear2012csa}.
 
@@ -6,9 +8,8 @@ För dokumentation om olika program i UNIX-lika system används kommandot
 Det tar namnet på att annat kommando som du vill ha dokumentation för som 
 argument.
 Om vi till exempel vill ha dokumentation om just \emph{man} självt skriver vi 
-\emph{man man} och får resultat i \prettyref{lst:manman}.
-\begin{lstlisting}[float=tbp,caption={Resultatet av kommandoraden \emph{man 
-	man}.},label={lst:manman}]
+\emph{man man} och får resultatet i \prettyref{lst:manman}.
+\begin{terminal}[float=tb,label={lst:manman},caption={Listningen av resultatet vid körningen av kommandot \code{man man}.}]
 /home/danbos$ man man
 MAN(1)						Manual pager utils						MAN(1)
 
@@ -45,7 +46,7 @@ DESCRIPTION
 	   types of pages they contain.
 [...]
 /home/danbos$
-\end{lstlisting}
+\end{terminal}
 Manualsidorna är indelade i sektioner, denna ges som en siffra inom parentes 
 efter namnet på manualsidan -- exempelvis \emph{man(1)}.
 För att specificera en särskild sektion anges sektionen innan namnet på 
