--- a/introduction/studyguide.tex
+++ b/introduction/studyguide.tex
@@ -1,3 +1,5 @@
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 \documentclass[a4paper,logo]{miunart}
 \usepackage[utf8]{inputenc}
 \usepackage{natbib}
