--- a/lectures/datarep/datarep.tex
+++ b/lectures/datarep/datarep.tex
@@ -1,4 +1,5 @@
-%\documentclass[handout]{beamer}
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 \documentclass{beamer}
 \usepackage[utf8]{inputenc}
 %\usepackage{times}
@@ -33,7 +34,13 @@
 \title[Introduktion]{%
 	Datarepresentation
 }
-\author{Daniel Bosk}
+\author{Daniel Bosk\footnote{%
+	\tiny
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
+}}
 \institute[MIUN ITM]{%
 	%Division of Information and Communication Systems (ICS),\\
 	%Department of Information Technology and Media (ITM),\\
