--- a/lectures/intro/intro.tex
+++ b/lectures/intro/intro.tex
@@ -1,3 +1,5 @@
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 %\documentclass[handout]{beamer}
 \documentclass{beamer}
 \usepackage[utf8]{inputenc}
@@ -34,7 +36,13 @@
 	Introduktion till kursen\\
 	DT001G Informationsteknologi grundkurs
 }
-\author{Daniel Bosk}
+\author{Daniel Bosk\footnote{%
+	\tiny
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
+}}
 \institute[MIUN ITM]{%
 	%Division of Information and Communication Systems (ICS),\\
 	%Department of Information Technology and Media (ITM),\\
