--- a/lectures/shell/shell.tex
+++ b/lectures/shell/shell.tex
@@ -1,3 +1,5 @@
+% $Id$
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
 \documentclass[handout]{beamer}
 %\documentclass{beamer}
 \usepackage[utf8]{inputenc}
@@ -30,7 +32,12 @@
 \title[UNIX-like shells]{%
 	Lecture on UNIX-like shells
 }
-\author{Daniel Bosk}
+\author{Daniel Bosk\footnote{%
+	Detta verk är tillgängliggjort under licensen Creative Commons 
+	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+	För att se en sammanfattning och kopia av licenstexten besök URL 
+	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
+}}
 \institute{%
 	%Division of Information and Communication Systems (ICS),\\
 	%Avdelningen för informations- och kommunikationssytem (IKS),\\
