--- a/introduction/literature.tex
+++ b/introduction/literature.tex
@@ -96,5 +96,5 @@ För referens om talsystem och logik kan ni läsa kapitel 2 och
 \input{../assignments/sftp/literature.tex}
 
 
-\bibliography{../literature}
+\bibliography{../literature,rfc}
 \end{document}
