moved aims to external file.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@627 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/terminal/terminal.tex
+++ b/assignments/terminal/terminal.tex
@@ -55,12 +55,7 @@ komplexa resultat.
 \noindent
 Syftet med denna inlämningsuppgift är att
 \begin{itemize}
-	\item få en inblick i textbaserade användargränssnitt,
-	\item se sambandet mellan vad som händer i det textbaserade och det
-		grafiska gränssnittet,
-	\item få en förståelse för skillnaden mellan absoluta och relativa
-		sökvägar, samt
-	\item få en ökad förståelse för hur filsystemet fungerar.
+	\input{aims.tex}
 \end{itemize}
 
 
@@ -73,9 +68,6 @@ Syftet med denna inlämningsuppgift är att
 \section{Genomförande}
 \label{sec:Genomforande}
 \noindent
-% XXX skriv om uppgifterna så att studenterna fokuserar mindre på > och >>.
-% XXX byt ordning på uppgifterna: fråga om kommandonas funktioner först,
-% XXX   använd dem sedan.
 Du kommer att behöva använda ett terminalfönster och en grafisk filhanterare.
 För att använda dessa i de olika operativsystemen gör du följande:
 \begin{description}
@@ -118,7 +110,8 @@ För att använda dessa i de olika operativsystemen gör du följande:
 	\question\label{q:mkdir}
 	Vad gör kommandona mkdir(1) och rmdir(1)?
 	Läs manualsidan och testa själv med och utan olika argument.
-	(Motsvarigheten i Windows heter också \emph{mkdir} respektive \emph{rmdir}.)
+	(Motsvarigheterna i Windows heter också \emph{mkdir} respektive 
+	\emph{rmdir}.)
 	\begin{solution}
 		Skapar respektive tar bort tomma kataloger.
 	\end{solution}
