--- a/assignments/install/install.tex
+++ b/assignments/install/install.tex
@@ -2,7 +2,8 @@
 % Author:	Daniel Bosk <daniel.bosk@miun.se>
 \documentclass[a4paper]{miunasgn}
 \usepackage[utf8]{inputenc}
-\usepackage[english,swedish]{babel}
+\usepackage[T1]{fontenc}
+\usepackage[english]{babel}
 \usepackage{url,hyperref}
 \usepackage{prettyref,varioref}
 \usepackage{natbib}
