Adds URL to report template as there is a public URL now
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1067 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/literature.bib
+++ b/literature.bib
@@ -131,7 +131,7 @@
 	author={Mittuniversitetet},
 	title={Raportmall för tekniska rapporter},
 	year={2012},
-	note={Finns tillgänglig i lärplattformen}
+  URL={http://ver.miun.se/latex/miunthes/thesis/thesis.pdf},
 }
 @misc{Wikibooks2012l,
 	author={Wikibooks},
