--- a/literature.bib
+++ b/literature.bib
@@ -203,13 +203,13 @@
 	chapter={Bilaga B}
 }
 @manual{bsdman,
-	organisation={OpenBSD},
+	organization={OpenBSD},
 	title={OpenBSD Reference Manual},
 	note={OpenBSD 5.0},
 	URL={http://www.openbsd.org/cgi-bin/man.cgi?manpath=OpenBSD+5.0&arch=i386&format=html},
 }
 @manual{linuxman,
-	organisation={Linux},
+	organization={Linux},
 	title={Linux Programmer's Manual},
 	URL={http://unixhelp.ed.ac.uk/CGI/man-cgi},
 }
@@ -244,12 +244,47 @@
 	author={Bosk, Daniel},
 	title={En teknisk rapport : En anpassning av rapportmallen för LibreOffice 
 		till dokumentklassen för {\LaTeX}},
-	note={Finns tillgänglig i lärplattformen},
+  URL={http://ver.miun.se/latex/miunthes/thesis/thesis.pdf},
 }
 @misc{LucksMD5,
 	author={Daum, Magnus and Lucks, Stefan},
-	title={Hash Collisions (The Poisoned Mesage Attack): ''The Story of {Alice} 
-		and her Boss''}
+  title={Hash Collisions (The Poisoned Mesage Attack): ''The Story of {Alice} 
+    and her Boss''},
 	note={Hämtat 10 oktober 2012},
 	URL={http://th.informatik.uni-mannheim.de/people/lucks/HashCollisions/},
+}
+@book{nemeth2011ual,
+  author={Evi Nemeth and Garth Snyder and Trent R. Hein and Ben Whaley},
+  title={UNIX and Linux system administration handbook},
+  publisher={Prentice Hall},
+  address={Upper Saddle River, NJ},
+  year={2011},
+  edition={4th ed.},
+  ISBN={978-0-13-148005-6 (pbk. : alk. paper)},
+  keywords={Linux UNIX Operativsystem},
+}
+@misc{debian,
+  organization={{Debian Project}},
+  title={Debian -- The universal Operating System},
+  URL={http://www.debian.org},
+}
+@misc{vbox,
+  organization={Oracle},
+  title={Oracle VM VirtualBox},
+  URL={https://www.virtualbox.org},
+}
+@misc{ubuntuinstall,
+  organization={Canonical},
+	title={Ubuntu Server},
+	URL={http://www.ubuntu.com/download/server},
+}
+@misc{iproute2,
+  title={Oracle VM VirtualBox},
+  author={The Linux Foundation},
+  URL={http://www.linuxfoundation.org/collaborate/workgroups/networking/iproute2},
+}
+@misc{debiangnome,
+  shorthand={Gno},
+  title={Gnome - Debian Wiki},
+  URL={http://wiki.debian.org/Gnome},
 }
