--- a/project/project.tex
+++ b/project/project.tex
@@ -45,13 +45,9 @@ för att formulera ytterligare resultat.
 
 \section{Syfte}
 \noindent
-Syftet med uppgiften är
+Syftet med uppgiften är:
 \begin{itemize}
-	\item att fördjupa sig inom något delområde som tagits upp i kursen,
-	\item att öva på genomförandet en enklare objektiv undersökning och dra en 
-		slutsats av resultatet, samt
-	\item att öva på att skriva en rapport och hålla en muntlig presentation av 
-		densamma.
+  \input{aims.tex}
 \end{itemize}
 
 
