--- a/lectures/intro/intro.tex
+++ b/lectures/intro/intro.tex
@@ -3,31 +3,23 @@
 %\documentclass[handout]{beamer}
 \documentclass{beamer}
 \usepackage[utf8]{inputenc}
-%\usepackage{times}
 \usepackage[T1]{fontenc}
 \usepackage[english,swedish]{babel}
-\usepackage{url}
+\usepackage[hyphens]{url}
 \usepackage{varioref,prettyref}
 \usepackage{graphicx}
 \usepackage[today,nofancy]{svninfo}
-\usepackage{natbib}
+\usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
+\addbibresource{literature.bib}
 \usepackage[varioref,prettyref]{miunmisc}
-\setcitestyle{numbers,square}
-\bibliographystyle{swealpha}
 
 \svnInfo $Id$
 
 \mode<presentation>
 {
-	%\usetheme{Berkeley}
-  %\usetheme{Dresden}
-	\usetheme{Frankfurt}
-  %\usetheme{Madrid}
-  %\usetheme{PaloAlto}
-	\setbeamercovered{transparent}
-  %\usecolortheme{default}
-  %\usecolortheme{crane}
-	\usecolortheme{seagull}
+  \usetheme{Frankfurt}
+  \setbeamercovered{transparent}
+  \usecolortheme{seagull}
 }
 %\def\newblock{\hskip .11em plus .33em minus .07em}
 \setbeamertemplate{footline}{\insertframenumber}
@@ -44,13 +36,11 @@
 	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
 }}
 \institute[MIUN ITM]{%
-	%Division of Information and Communication Systems (ICS),\\
-	%Department of Information Technology and Media (ITM),\\
-	%Mid Sweden University, Sundsvall.
+  %Department of Information and Communication Systems (ICS),\\
+  %Mid Sweden University, Sundsvall.
 	%
-	%Avdelningen för informations- och kommunikationssytem (IKS),\\
-	Institutionen för informationsteknologi och medier (ITM),\\
-	Mittuniversitetet, Sundsvall.
+  Avdelningen för informations- och kommunikationssytem (IKS),\\
+  Mittuniversitetet, Sundsvall.
 }
 \date{\svnId}
 
@@ -132,7 +122,7 @@
 %%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Referenser}
-	\bibliography{../../literature}
+  \printbibliography
 \end{frame}
 
 \end{document}
